Fixed navbar menu not working on smaller screens (mostly)
Tried to change as little as possible.

Documentation & Documentation-testing haven't been fixed, because I don't understand why the iframe's position is set to fixed, hence I didn't want to touch it and break something.

--- a/main.css
+++ b/main.css
@@ -303,6 +303,12 @@ nav ul:first-of-type {
     flex-direction: column
 }
 
+nav .right {
+    display: inherit;
+    flex-direction: inherit;
+    padding: 0 18px
+}
+
 nav a,
 nav a:visited,
 nav li {
@@ -379,7 +385,8 @@ nav .logomark {
     height: 48px;
     line-height: 14px;
     padding: 12px;
-    vertical-align: middle
+    vertical-align: middle;
+    display: none
 }
 
 nav .logomark .logomark-svg,
@@ -423,8 +430,16 @@ nav .logomark:focus .logomark-svg {
         padding: 0
     }
 
+    nav .right {
+        padding: 0
+    }
+
     nav ul:first-of-type {
         flex-direction: row
+    }
+
+    nav .logomark {
+        display: inline-block
     }
 }
 
